# zer-runtime

./: .env.example  .gitignore  README.md  agent.py  install.sh  pyproject.toml  run_validation.py
benchmarks/: run.py
personalities/: data_agent.yaml
src/zeroedge/: agent.py  cli.py  main.py  runtime.py  version.py
src/zeroedge/benchmark/: run.py
src/zeroedge/core/: config.py  deps.py  event_bus.py  logger.py  scheduler.py  task_manager.py  version.py
src/zeroedge/decision/: engine.py  types.py  validator.py
src/zeroedge/execution/: dispatcher.py  executors.py
src/zeroedge/intelligence/: classifier.py  pipeline.py  router.py  trace.py  types.py
src/zeroedge/memory/: confidence.py  database.py  guard.py  migration_manager.py  models.py  policy.py  router.py
src/zeroedge/memory/migrations/: 001_initial.sql  002_add_versioning.sql  003_add_provider_metadata.sql  004_add_task_metadata.sql
src/zeroedge/plugins/: loader.py
src/zeroedge/providers/: mock.py  registry.py
src/zeroedge/replay/: manager.py
src/zeroedge/tools/python/: limits.py  security.py
src/zeroedge/workspace/: manager.py
tests/: test_runtime.py
tests/decision/: test_engine.py
tests/execution/: test_dispatcher.py
tests/intelligence/: test_pipeline.py
