[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroedge-runtime"
version = "0.1.0"
description = "ZeroEdgeAI Autonomous Edge Agent Runtime"
authors = [{name = "ZeroEdgeAI Team"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "pytest>=8.0",
    "psutil>=5.0",
]

[project.scripts]
zer = "zeroedge.cli:main"
zer-benchmark = "zeroedge.benchmark.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
